# genal-activation

./: LICENSE  README.md  genal_activation.py  pyproject.toml
